[tool.poetry]
name = "engie"
version = "1.0.0"
description = ""
authors = ["Edward Arghiroiu <edward.arghiroiu@ucodes.be>"]
license = "Proprietary"
repository = "https://github.com/ucodesdevteam/engie"
packages = [{ include = "engie", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"

flask = "~-2.1.3"
pandas = "~1.4.3"

pytest = { version = "~7.1.2", optional = true } # tests
pre-commit = { version = "~2.18.1", optional = true } # pre commit
isort = { version = "~5.10.1", optional = true } # pre commit
black = { version = "~22.3.0", optional = true } # pre commit
flake8 = { version = "~4.0.1", optional = true } # pre commit

[tool.poetry.extras]
dev = ["pre-commit", "isort", "black", "flake8"]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
